overflow fix?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,13 @@
 }
 body {
     font-family: "Helvetica",Arial,Helvetica,Geneva,sans-serif;
-    overflow:hidden;
+    /*overflow:hidden;*/
+   overflow-x:hidden;
+}
+
+@media only screen and (max-width: 1024px)
+{
+    body { overflow:hidden; }
 }
 
 p{
